Finish nini echo bot

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ django = "*"
 django-split-settings = "*"
 django-environ = "*"
 django-extensions = "*"
+python-telegram-bot = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
