--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,18 +1,6 @@
 version: '3'
 
 services:
-  db:
-    image: postgres:11
-    restart: always
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
-    environment:
-      POSTGRES_USER: $POSTGRES_USER
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_DB: nini_echo_bot
-
   django:
     build: ..
     restart: always
@@ -28,8 +16,8 @@ services:
       SECRET_KEY: $SECRET_KEY
       LOG_SQL: $LOG_SQL
       TG_TOKEN: $TG_TOKEN
-    depends_on:
-      - db
+    networks:
+      - internal
 
   web:
     image: nginx:alpine
@@ -38,13 +26,24 @@ services:
       - django_media:/usr/src/app/media
       - django_static:/usr/src/app/assets
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    ports:
-      - 8088:80
+    labels:
+      - "traefik.enable=true"
+      - "traefik.frontend.rule=Host:whoami.example.com"
+      - "traefik.frontend.entryPoints=http,https"
+      - "traefik.frontend.redirect.entryPoint=https"
+    networks:
+      - web
+      - internal
     depends_on:
       - django
 
 volumes:
-  pg_data:
   django_log:
   django_media:
   django_static:
+
+networks:
+  web:
+    external: true
+  internal:
+    external: false
