--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - django_static:/usr/src/app/assets
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     labels:
+      - "traefik.docker.network=web"
       - "traefik.enable=true"
       - "traefik.frontend.rule=Host:nini.arthurc.me"
       - "traefik.frontend.entryPoints=http,https"
