--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     build: ..
     restart: always
     volumes:
-      - django_log:/usr/src/app/log
-      - django_media:/usr/src/app/media
-      - django_static:/usr/src/app/assets
+      - django_log:/src/log
+      - django_media:/src/media
+      - django_static:/src/assets
     environment:
       ALLOWED_HOSTS: $ALLOWED_HOSTS
       DATABASE_URL: $DATABASE_URL
@@ -16,27 +16,14 @@ services:
       SECRET_KEY: $SECRET_KEY
       LOG_SQL: $LOG_SQL
       TG_TOKEN: $TG_TOKEN
-    networks:
-      - internal
-
-  web:
-    image: nginx:alpine
-    restart: always
-    volumes:
-      - django_media:/usr/src/app/media
-      - django_static:/usr/src/app/assets
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     labels:
       - "traefik.docker.network=web"
       - "traefik.enable=true"
-      - "traefik.frontend.rule=Host:nini.arthurc.me"
+      - "traefik.frontend.rule=Host:${DOMAIN}"
       - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.redirect.entryPoint=https"
     networks:
       - web
-      - internal
-    depends_on:
-      - django
 
 volumes:
   django_log:
@@ -46,5 +33,3 @@ volumes:
 networks:
   web:
     external: true
-  internal:
-    external: false
